# agent_api_demo

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.org  backlog.org  docker-compose.observability.yml  progress.txt  pyproject.toml  release-please-config.json
.github/workflows/: test.yml
app/: logging_config.py  main.py  middleware.py  telemetry.py
app/routers/: health.py  hello.py
app/schemas/: health.py
archive/2026-03-08-observability-opentelemetry/: prd-observability-opentelemetry.json  progress.txt
docs/design/: 000-template.org  001-hello-world-route.org  002-observability-opentelemetry.org  README.org
grafana/dashboards/: api-overview.json
grafana/provisioning/dashboards/: dashboards.yml
tasks/: prd-hello-world-route.json  prd-observability-opentelemetry.json
tests/: conftest.py  test_health.py  test_hello.py  test_logging.py  test_middleware.py
